# geocat-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
crates/geocat-rs/: Cargo.toml
crates/geocat-rs/src/: gradient.rs  interpolation.rs  lib.rs  meteorology.rs
python/geocat_rs/: __init__.py  interp_hybrid.py
src/: lib.rs  py_gradient.rs  py_interpolation.rs  py_meteorology.rs
tests/: bench_interp_hybrid.py  bench_workflow.py  test_interp_hybrid_compat.py  test_vs_geocat.py
