[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "geocat-rs"
version = "0.1.0"
description = "Rust-accelerated drop-in replacements for geocat-comp computational functions"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Fahrenheit Research"}]
keywords = ["geocat", "ncar", "ncl", "atmospheric-science", "meteorology", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["numpy>=1.20", "xarray>=2022.0", "metrust>=0.4.0"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/FahrenheitResearch/geocat-rs"
Repository = "https://github.com/FahrenheitResearch/geocat-rs"

[tool.maturin]
python-source = "python"
module-name = "geocat_rs._geocat_rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
